--- a/public/template/ngCart/cart.html
+++ b/public/template/ngCart/cart.html
@@ -1,6 +1,8 @@
 
-<div class="alert alert-warning" role="alert" ng-show="ngCart.getTotalItems() === 0">
-    Your cart is empty
+<div class="table-responsive col-lg-12 text-center" role="alert" ng-show="ngCart.getTotalItems() === 0">
+    <br>
+    Ваш кошик пустий.
+    <br><br>
 </div>
 
 <div class="table-responsive col-lg-12" ng-show="ngCart.getTotalItems() > 0">
