--- a/public/templates/main.template.html
+++ b/public/templates/main.template.html
@@ -71,7 +71,7 @@
                 <div class="col-md-3 col-sm-6">
                     <h3>Обліковий запис</h3>
                     <ul>
-                        <li><a href="#">Обліковий запис</a></li>
+                        <li><a ui-sref="login">Обліковий запис</a></li>
                         <li><a href="#">Історія замовлень</a></li>
                         <li><a href="#">Список бажаних товарів</a></li>
                         <li><a href="#">Розсилання новин</a></li>
