--- a/public/templates/products_grocery_caviar.template.html
+++ b/public/templates/products_grocery_caviar.template.html
@@ -1,15 +1,16 @@
 <div class="text-center">Икра</div>
 <div class="col-md-9 col-sm-9 productsComponent">
-    <div class="products col-md-3 col-sm-3" ng-repeat="caviar in $ctrl.main.grocery | filter: {type: 'caviar'}">
-        <img src="images/pic2.jpg" alt="" class="center-block"/>
+    <div class="products col-md-3 col-sm-3" ng-repeat="caviar in $ctrl.main.groceries | filter: {type: 'caviar'}">
+        <img ng-src="{{$ctrl.main.path + 'get_image/' + caviar.id}}" alt="" class="center-block"
+             ui-sref="products.detailed({id: caviar.id})"/>
 
-        <div id="productsDescription">
+        <div class="productsDescription" ui-sref="products.detailed({id: caviar.id})">
             <h4>{{caviar.name}}</h4>
             <span>Код товара: U22794</span>
             <p>{{caviar.price | currency: '₴ '}} грн.</p>
         </div>
 
-        <div id="productsAddToCartSection">
+        <div class="productsAddToCartSection">
             <ngcart-addtocart id="{{ caviar.id }}"
                               name="{{ caviar.name }}"
                               price="{{ caviar.price }}"
