--- a/public/templates/products_grocery_cheese.template.html
+++ b/public/templates/products_grocery_cheese.template.html
@@ -1,15 +1,16 @@
 <div class="text-center">Сыры</div>
 <div class="col-md-9 col-sm-9 productsComponent">
-    <div class="products col-md-3 col-sm-3" ng-repeat="che in $ctrl.main.grocery | filter: {type: 'cheese'}">
-        <img src="images/pic2.jpg" alt="" class="center-block"/>
+    <div class="products col-md-3 col-sm-3" ng-repeat="che in $ctrl.main.groceries | filter: {type: 'cheese'}">
+        <img ng-src="{{$ctrl.main.path + 'get_image/' + che.id}}" alt="" class="center-block"
+             ui-sref="products.detailed({id: che.id})"/>
 
-        <div id="productsDescription">
+        <div class="productsDescription" ui-sref="products.detailed({id: che.id})">
             <h4>{{che.name}}</h4>
             <span>Код товара: U22794</span>
             <p>{{che.price | currency: '₴ '}} грн.</p>
         </div>
 
-        <div id="productsAddToCartSection">
+        <div class="productsAddToCartSection">
             <ngcart-addtocart id="{{ che.id }}"
                               name="{{ che.name }}"
                               price="{{ che.price }}"
