--- a/public/templates/products_grocery_macaroni.template.html
+++ b/public/templates/products_grocery_macaroni.template.html
@@ -1,15 +1,16 @@
 <div class="text-center">Макароны</div>
 <div class="col-md-9 col-sm-9 productsComponent">
-    <div class="products col-md-3 col-sm-3" ng-repeat="mac in $ctrl.main.grocery | filter: {type: 'macaroni'}">
-        <img src="images/pic2.jpg" alt="" class="center-block"/>
+    <div class="products col-md-3 col-sm-3" ng-repeat="mac in $ctrl.main.groceries | filter: {type: 'macaroni'}">
+        <img ng-src="{{$ctrl.main.path + 'get_image/' + mac.id}}" alt="" class="center-block"
+             ui-sref="products.detailed({id: mac.id})"/>
 
-        <div id="productsDescription">
+        <div class="productsDescription" ui-sref="products.detailed({id: mac.id})">
             <h4>{{mac.name}}</h4>
             <span>Код товара: U22794</span>
             <p>{{mac.price | currency: '₴ '}} грн.</p>
         </div>
 
-        <div id="productsAddToCartSection">
+        <div class="productsAddToCartSection">
             <ngcart-addtocart id="{{ mac.id }}"
                               name="{{ mac.name }}"
                               price="{{ mac.price }}"
