--- a/public/templates/products_wines.template.html
+++ b/public/templates/products_wines.template.html
@@ -3,7 +3,7 @@
     <span class="col-md-12 winesNavHeader">Вина</span>
         <a ui-sref="products.wines.sparkling" ui-sref-active="current-page-item">Игристые</a>
         <a ui-sref="products.wines.dry" ui-sref-active="current-page-item">Сухие</a>
-        <a ui-sref="products.wines.sweet" ui-sref-active="current-page-item">Полусладкие</a>
+        <a ui-sref="products.wines.semisweet" ui-sref-active="current-page-item">Полусладкие</a>
     </div>
 
     <div class="navBlock">
@@ -23,16 +23,17 @@
 
 <ui-view>
     <div class="col-md-9 col-sm-9 productsComponent">
-            <div class="products col-md-3 col-sm-3" ng-repeat="wine in $ctrl.main.wines">
-                <img src="images/pic2.jpg" alt="" class="center-block"/>
+            <div class="products col-md-3 col-sm-3" ng-repeat="wine in $ctrl.main.wines"
+                 ui-sref="products.detailed({id: wine.id})">
+                <img ng-src="{{$ctrl.main.path + 'get_image/' + wine.id}}" alt="" class="center-block"/>
 
-                <div id="productsDescription">
+                <div class="productsDescription" ui-sref="products.detailed({id: wine.id})">
                 <h4>{{wine.name}}</h4>
                 <span>Код товара: U22794</span>
                 <p>{{wine.price | currency: '₴ '}} грн.</p>
                 </div>
 
-                <div id="productsAddToCartSection">
+                <div class="productsAddToCartSection">
                     <ngcart-addtocart id="{{ wine.id }}"
                                       name="{{ wine.name }}"
                                       price="{{ wine.price }}"
